todo/manifests/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 2223
      protocol: TCP
      targetPort: 5000
