todo/manifests/nodeport_service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 5000
