todo/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ing
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: todo-svc
              servicePort: 2223
